--- a/css/styles.css
+++ b/css/styles.css
@@ -97,5 +97,45 @@ body {
 	cursor: pointer;
 }
 
+.recipe-list {
+	text-align: center;
+	color: black;
+	font-size: 15px;
+	font-style: bolder;
+	padding: 4rem 0;
+}
+
+.recipe-details li {
+	border-radius: 0.75rem; 
+	border: 1px solid black;
+	display: inline-block;
+	margin-bottom: 3rem;
+	margin-left: 4%;
+	margin-right: 4%;
+	min-height: 10rem;
+	width: 25%;
+}
+
+.recipe-details .recipe-image {
+	width: 40%;
+	display: block;
+	margin: 0 auto;
+	border-right: 1px solid black;
+	position: relative;
+	left: -30px;
+}
+
+.recipe-details a {
+	font-size: 20px;
+	color: red;
+	font-weight: bolder;
+}
+
+.recipe-details a:hover {
+	cursor: pointer;
+	color: #F79F81;
+}
+
+
 
 
