--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ body {
 }
 
 .input-section .search:hover {
-	background-color: #ffcccc;
+	background-color: black;
 	cursor: pointer;
 }
 
@@ -102,18 +102,19 @@ body {
 	color: black;
 	font-size: 15px;
 	font-style: bolder;
-	padding: 4rem 0;
+	padding: 4rem 4rem;
 }
 
 .recipe-details li {
 	border-radius: 0.75rem; 
 	border: 1px solid black;
 	display: inline-block;
-	margin-bottom: 3rem;
+	margin-bottom: 4%;
 	margin-left: 4%;
 	margin-right: 4%;
-	min-height: 10rem;
+	min-height: 4rem;
 	width: 25%;
+	text-align: center;
 }
 
 .recipe-details .recipe-image {
@@ -122,7 +123,7 @@ body {
 	margin: 0 auto;
 	border-right: 1px solid black;
 	position: relative;
-	left: -30px;
+	left: -50px;
 }
 
 .recipe-details a {
@@ -136,6 +137,27 @@ body {
 	color: red;
 }
 
+.recipe-details p {
+	margin: 18px;
+	font-size: 1.25rem;
+	text-align: center;
+	max-width: : 10%;
+}
+
+.recipe-description {
+	width: 59%;
+	display: block;
+	margin: 3rem 0;
+	color: black;
+	font-weight: bolder;
+	font-size: 20px;
+	text-align: center; 
+}
 
 
+/*
+1 rem = 16px
+1 em = 16px
 
+all ways use pixels
+*/
