--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ body {
 	color: black;
 	font-size: 15px;
 	font-style: bolder;
-	padding: 4rem 4rem;
+	padding: 2rem 2rem 2rem 2rem;
 }
 
 .recipe-details li {
@@ -113,23 +113,23 @@ body {
 	margin-left: 4%;
 	margin-right: 4%;
 	min-height: 4rem;
-	width: 25%;
+	width: 40%;
 	text-align: center;
 }
 
 .recipe-details .recipe-image {
 	width: 40%;
 	display: block;
-	margin: 0 auto;
-	border-right: 1px solid black;
+	margin: auto;
+	border-right: 5px solid black;
 	position: relative;
-	left: -50px;
 }
 
 .recipe-details a {
 	font-size: 20px;
 	color: red;
 	font-weight: bolder;
+	margin: 0 auto;
 }
 
 .recipe-details a:hover {
@@ -139,18 +139,17 @@ body {
 
 .recipe-details p {
 	margin: 18px;
-	font-size: 1.25rem;
+	font-size: 18px;
 	text-align: center;
-	max-width: : 10%;
+	max-width: : 50%;
 }
 
 .recipe-description {
-	width: 59%;
-	display: block;
-	margin: 3rem 0;
+	width: 50%;
+	display: inline-block;
 	color: black;
 	font-weight: bolder;
-	font-size: 20px;
+	font-size: 18px;
 	text-align: center; 
 }
 
