--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,17 @@ html {
 	background: url(../images/food-background.jpg) no-repeat center center fixed; 
 	box-sizing: border-box;
 	display: inline-block;
+	background-position: center bottom;
 }
 
 body {
 	font-family: "Times New Roman", Times, serif;
 	margin: 0 auto;
 	text-align: center;
+}
+
+#row-results {
+	font-size: 29.5px;
 }
 
 .checkbox {
@@ -35,14 +40,14 @@ body {
 }
 
 #container {
-	padding: 30px;
+	padding: 20px 20px 20px 20px;
 	font-family: "Times New Roman", Times, serif;
 	font-size: 29px;
 	font-weight: bold;
 }
 
 #wrapper {
-	max-width: 61rem;
+	width: 61rem;
 	margin: 20px auto 50px auto;
 	background: url("../images/1164418.png");
 }
@@ -73,7 +78,7 @@ body {
 	color: red;
 	font-weight: bolder;
 	padding: 0.15%;
-	margin-right: 2.5%;	
+	margin-right: 1.5%;	
 	border-color: black;
 	border-style: solid;
 	border-radius: 0.30rem;
@@ -92,11 +97,6 @@ body {
 	border-style: solid;
 }
 
-.input-section .search:hover {
-	background-color: black;
-	cursor: pointer;
-}
-
 .recipe-list {
 	text-align: center;
 	color: black;
@@ -106,7 +106,7 @@ body {
 }
 
 .recipe-details li {
-	border-radius: 0.75rem; 
+	border-radius: 25px;
 	border: 1px solid black;
 	display: inline-block;
 	margin-bottom: 4%;
@@ -115,13 +115,15 @@ body {
 	min-height: 4rem;
 	width: 40%;
 	text-align: center;
+	background-color: grey; 
+
 }
 
 .recipe-details .recipe-image {
 	width: 40%;
 	display: block;
 	margin: auto;
-	border-right: 5px solid black;
+	border-right: 1px solid black;
 	position: relative;
 }
 
@@ -130,11 +132,6 @@ body {
 	color: red;
 	font-weight: bolder;
 	margin: 0 auto;
-}
-
-.recipe-details a:hover {
-	cursor: pointer;
-	color: red;
 }
 
 .recipe-details p {
