--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/*Created and modified by Hieu Nguyen*/
 html {
 	background: url(../images/food-background.jpg) no-repeat center center fixed; 
 	box-sizing: border-box;
@@ -11,9 +12,23 @@ body {
 	text-align: center;
 }
 
-#row-results {
-	font-size: 29.5px;
+#container {
+	font-family: "Times New Roman", Times, serif;
+	font-size: 29px;
+	font-weight: bold;
+	padding: 20px 20px 20px 20px;
 }
+
+#row-results {
+	font-size: 28px;
+}
+
+#wrapper {
+	width: 945px;
+	margin: 20px auto 50px auto;
+	background: url("../images/1164418.png");
+}
+
 
 .checkbox {
 	display: inline-block;
@@ -21,7 +36,7 @@ body {
 	margin: 10px auto;
 	width: 30px;
   	border-radius: 40px;
-  	position: relative;
+  	position: relative; 	
 }
 
 .heading h1 {
@@ -39,62 +54,50 @@ body {
 	width: 90%;
 }
 
-#container {
-	padding: 20px 20px 20px 20px;
-	font-family: "Times New Roman", Times, serif;
-	font-size: 29px;
-	font-weight: bold;
-}
-
-#wrapper {
-	width: 61rem;
-	margin: 20px auto 50px auto;
-	background: url("../images/1164418.png");
-}
-
 .input-section {
-	padding-bottom: 20px;
 	margin: 0 auto;
+	padding-bottom: 20px;
 	width: 52em;
 }
 
 .input-section #ingredient {
-	border-radius: 0.20rem;
+	border-radius: 3.2px;
 	border-color: black;
 	border-style: solid;
 	font-family: "Times New Roman", Times, serif;
-	font-size: 1.25rem;
-	height: 1.5rem;
+	font-size: 20px;
+	height: 24px;
 	margin-right: 5%;	
 	padding: 0.10%;
 	width: 30%;
 }
 
 .input-section select {
-	font-size: 1.25rem;
-	font-family: "Times New Roman", Times, serif;
-	height: 1.8em;
-	width: 40%;
-	color: red;
-	font-weight: bolder;
-	padding: 0.15%;
-	margin-right: 1.5%;	
 	border-color: black;
+	border-radius: 4.8px;
 	border-style: solid;
-	border-radius: 0.30rem;
+	color: red;
+	font-family: "Times New Roman", Times, serif;
+	font-size: 20px;
+	font-weight: bolder;
+	height: 28px;
+	margin-right: 5%;
+	margin-left: 0.15%;	
+	padding: 0.1%;
+	width: 28%;
 }
 
 .input-section .search {
-	font-size: 1.35rem;
-	font-weight: bolder;
-	font-family: "Times New Roman", Times, serif;
-	height: 1.8rem;
-	width: 20%;
-	color: red;
-	padding: 0.15%;
-	border-radius: 0.35rem;
 	border-color: black;
+	border-radius: 5.6px;
 	border-style: solid;
+	color: red;
+	font-family: "Times New Roman", Times, serif;
+	font-size: 21.6px;
+	font-weight: bolder;
+	height: 28.8px;
+	padding: 0.15%;
+	width: 20%;
 }
 
 .recipe-list {
@@ -102,7 +105,7 @@ body {
 	color: black;
 	font-size: 15px;
 	font-style: bolder;
-	padding: 2rem 2rem 2rem 2rem;
+	padding: 32px, 32px, 32px, 32px;
 }
 
 .recipe-details li {
@@ -112,7 +115,7 @@ body {
 	margin-bottom: 4%;
 	margin-left: 4%;
 	margin-right: 4%;
-	min-height: 4rem;
+	min-height: 32px;
 	width: 40%;
 	text-align: center;
 	background-color: grey; 
@@ -151,9 +154,138 @@ body {
 }
 
 
-/*
-1 rem = 16px
-1 em = 16px
+@media only screen and (max-width: 1024px) {
+		body{
+		background-color: green;
+	}
+	#row-results {
+	font-size: 28px;
+	}
+	#wrapper {
+		width: 90%;
+	}
 
-all ways use pixels
-*/
+	.heading p {
+		width: 80%;
+	}
+
+	.recipe-details li {
+		display: block;
+		margin: 32px auto;
+		width: 70%;
+	}
+}
+
+@media only screen and (max-width: 768px) {
+	body{
+		background-color: lightblue;
+	}
+	#row-results {
+		font-size: 28px;
+	}	
+	#wrapper {
+		width: 100%;
+	}
+	.input-section{
+		padding: 10px;
+	}
+	.input-section .search {
+		width: 25%;
+		margin-top: 16px;
+	}
+	.heading h1 {
+		font-size: 60px;
+	}
+
+	.heading p {
+		width: 85%;
+	}
+
+	.recipe-details .recipe-image {
+		width: 99%;
+		display: block;
+		margin: 12px auto;
+	}
+	.input-section #ingredient, .input-section .search, .input-section select {
+		width: 40%;
+		margin: 16px auto;
+		height: 28px;
+		display: block;
+	}
+	.recipe-details .recipe-description {
+		float: none;
+		width: 99%;
+		display: block;
+		margin: 0 auto;
+	}
+}
+/*500px minumum noted*/
+@media only screen and (max-width: 568px) {
+		body{
+		background-color: yellow;
+	}
+	#row-results {
+	font-size: 30px;
+	width: 50%;
+	}	
+	#wrapper {
+		width: 95%;
+	}
+
+	.input-section {
+		width: 90%;
+	}
+
+	.heading h1 {
+		font-size: 52px;
+		font-weight: bolder;
+		color: red;
+		padding-top: 2.4px;
+		padding-bottom: 24px;
+	}
+
+	.heading p {
+		width: 95%;
+	}
+
+	.input-section #ingredient {
+		margin-right: 2%;
+	}
+
+	.input-section #ingredient, .input-section .search, .input-section select {
+		width: 90%;
+		margin: 16px auto;
+		height: 28px;
+		display: block;
+	}
+	.recipe-details li {
+		width: 80%;
+	}
+}
+
+@media only screen and (max-width: 500px) {
+	body{
+		background-color: orange;
+	}
+
+	#row-results {
+	font-size: 24px;
+	text-align: center;
+	width: 110%;
+	}
+
+	.input-section {
+		width: 100%;
+	}
+
+	.input-section #ingredient, .input-section .search, .input-section select {
+		width: 90%;
+		margin: 16px auto;
+		height: 28px;
+		display: block;
+	}
+
+	.recipe-details li {
+		width: 90%;
+	}
+}
