--- a/css/styles.css
+++ b/css/styles.css
@@ -7,26 +7,26 @@ html {
 }
 
 body {
-	font-family: "Times New Roman", Times, serif;
+	font-family: sans-serif;
 	margin: 0 auto;
 	text-align: center;
 }
 
 #container {
-	font-family: "Times New Roman", Times, serif;
+	font-family: sans-serif;
 	font-size: 29px;
 	font-weight: bold;
 	padding: 20px 20px 20px 20px;
 }
 
 #row-results {
-	font-size: 28px;
+	font-size: 26px;
 }
 
 #wrapper {
 	width: 945px;
 	margin: 20px auto 50px auto;
-	background: url("../images/1164418.png");
+	background-color: rgba(255,255,255,0.8);
 }
 
 
@@ -40,9 +40,10 @@ body {
 }
 
 .heading h1 {
-	color: red;
-	font-size: 50px;
+	color: black;
+	font-size: 35px;
 	font-weight: bolder;
+	margin-bottom: 20px;
 }
 
 .heading p {
@@ -64,8 +65,8 @@ body {
 	border-radius: 3.2px;
 	border-color: black;
 	border-style: solid;
-	font-family: "Times New Roman", Times, serif;
-	font-size: 20px;
+	font-family: sans-serif;
+	font-size: 19px;
 	height: 24px;
 	margin-right: 5%;	
 	padding: 0.10%;
@@ -76,9 +77,9 @@ body {
 	border-color: black;
 	border-radius: 4.8px;
 	border-style: solid;
-	color: red;
-	font-family: "Times New Roman", Times, serif;
-	font-size: 20px;
+	color: black;
+	font-family: sans-serif;
+	font-size: 17.5px;
 	font-weight: bolder;
 	height: 28px;
 	margin-right: 5%;
@@ -91,8 +92,8 @@ body {
 	border-color: black;
 	border-radius: 5.6px;
 	border-style: solid;
-	color: red;
-	font-family: "Times New Roman", Times, serif;
+	color: black;
+	font-family: sans-serif;
 	font-size: 21.6px;
 	font-weight: bolder;
 	height: 28.8px;
@@ -115,49 +116,52 @@ body {
 	margin-bottom: 4%;
 	margin-left: 4%;
 	margin-right: 4%;
-	min-height: 32px;
+	height: 220px;
 	width: 40%;
 	text-align: center;
-	background-color: grey; 
-
+	background-color: grey;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+	position: relative;
 }
 
 .recipe-details .recipe-image {
 	width: 40%;
-	display: block;
+	display: none;
 	margin: auto;
-	border-right: 1px solid black;
 	position: relative;
 }
 
 .recipe-details a {
 	font-size: 20px;
-	color: red;
+	color: black;
 	font-weight: bolder;
 	margin: 0 auto;
 }
 
 .recipe-details p {
-	margin: 18px;
+	margin: 0px;
 	font-size: 18px;
 	text-align: center;
 	max-width: : 50%;
 }
 
 .recipe-description {
-	width: 50%;
-	display: inline-block;
+	width: 100%;
 	color: black;
 	font-weight: bolder;
 	font-size: 18px;
-	text-align: center; 
+	text-align: center;
+	position: absolute;
+	bottom: 0px;
+	background-color: rgba(255,255,255,0.8);
+	border-radius: 0px 0px 25px 25px;
+	padding: 10px 0px;
 }
 
 
 @media only screen and (max-width: 1024px) {
-		body{
-		background-color: green;
-	}
 	#row-results {
 	font-size: 28px;
 	}
@@ -177,9 +181,6 @@ body {
 }
 
 @media only screen and (max-width: 768px) {
-	body{
-		background-color: lightblue;
-	}
 	#row-results {
 		font-size: 28px;
 	}	
@@ -221,9 +222,6 @@ body {
 }
 /*500px minumum noted*/
 @media only screen and (max-width: 568px) {
-		body{
-		background-color: yellow;
-	}
 	#row-results {
 	font-size: 30px;
 	width: 50%;
@@ -239,7 +237,7 @@ body {
 	.heading h1 {
 		font-size: 52px;
 		font-weight: bolder;
-		color: red;
+		color: black;
 		padding-top: 2.4px;
 		padding-bottom: 24px;
 	}
@@ -264,10 +262,6 @@ body {
 }
 
 @media only screen and (max-width: 500px) {
-	body{
-		background-color: orange;
-	}
-
 	#row-results {
 	font-size: 24px;
 	text-align: center;
