--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,20 @@
 /*Created and modified by Hieu Nguyen*/
+
+body {
+	background-size: 100;
+    background-repeat: repeat;
+}
+
 html {
-	background: url(../images/food-background.jpg) no-repeat center center fixed; 
+	/*background: url(../images/food-background.jpg) no-repeat center center fixed;*/ 
 	box-sizing: border-box;
 	display: inline-block;
 	background-position: center bottom;
 }
-
+aside { 
+    display: block;
+    align-content: stretch; 
+}
 body {
 	font-family: sans-serif;
 	margin: 0 auto;
@@ -46,6 +55,13 @@ body {
 	margin-bottom: 20px;
 }
 
+.checkbox-grid li {
+    display: block;
+    float: left;
+    width: 25%;
+    font-size: smaller;
+}
+
 .heading p {
 	color: black;
 	font-size: 28px;
@@ -66,11 +82,13 @@ body {
 	border-color: black;
 	border-style: solid;
 	font-family: sans-serif;
-	font-size: 19px;
-	height: 24px;
-	margin-right: 5%;	
+	font-size: 25px;
+	height: 30px;
+	margin-right: 60%;
+	margin-bottom: 25px;	
 	padding: 0.10%;
-	width: 30%;
+	width: 100%;
+	text-align: center;
 }
 
 .input-section select {
@@ -81,24 +99,31 @@ body {
 	font-family: sans-serif;
 	font-size: 17.5px;
 	font-weight: bolder;
-	height: 28px;
+	height: 40%;
 	margin-right: 5%;
 	margin-left: 0.15%;	
-	padding: 0.1%;
-	width: 28%;
+	margin-bottom: 25px;
+	padding: 0.15%;
+	padding-bottom: 10%
+	width: 40%;
+	text-align: center;
 }
 
 .input-section .search {
 	border-color: black;
-	border-radius: 5.6px;
+	border-radius: 10px;
 	border-style: solid;
 	color: black;
 	font-family: sans-serif;
 	font-size: 21.6px;
 	font-weight: bolder;
-	height: 28.8px;
+	height: 30px;
 	padding: 0.15%;
 	width: 20%;
+	position: relative;
+    margin:0 auto;
+    display: block;
+	line-height: 30px;
 }
 
 .recipe-list {
