--- a/css/styles.css
+++ b/css/styles.css
@@ -11,26 +11,58 @@ html {
 	display: inline-block;
 	background-position: center bottom;
 }
-aside { 
-    display: block;
-    align-content: stretch; 
-}
+
 body {
 	font-family: sans-serif;
 	margin: 0 auto;
 	text-align: center;
 }
 
+.heading h1 {
+    color: black;
+    font-size: 30px;
+    font-weight: bolder;
+    margin-bottom: 20px;
+}
+
+header.heading {
+	background-color: red;
+	padding: 25px 25px 10px;
+	text-align: left;
+	color: white;
+}
+
 #container {
 	font-family: sans-serif;
 	font-size: 29px;
 	font-weight: bold;
-	padding: 20px 20px 20px 20px;
+	/*padding: 20px 20px 20px 20px;*/
 }
 
 #row-results {
 	font-size: 26px;
+	margin: 30px auto;
 }
+
+#row-results img{
+	width: 25px;
+	height: 25px;
+	border: 1px solid black;
+	padding: 5px 5px 6px 5px;
+	position: relative;
+	top: 14px;
+	font-size: 26px;
+}
+
+#row-results label {
+	border: 1px solid black;
+	padding: 10px 20px;
+	display: inline-block;
+	margin: 5px 10px 5px -8px;
+	font-size: 16px;
+
+}
+
 
 #wrapper {
 	width: 945px;
@@ -39,14 +71,14 @@ body {
 }
 
 
-.checkbox {
+/*.checkbox {
 	display: inline-block;
 	height: 30px;
 	margin: 10px auto;
 	width: 30px;
   	border-radius: 40px;
   	position: relative; 	
-}
+}*/
 
 .heading h1 {
 	color: black;
@@ -55,13 +87,14 @@ body {
 	margin-bottom: 20px;
 }
 
+/*
 .checkbox-grid li {
     display: block;
     float: left;
     width: 25%;
     font-size: smaller;
 }
-
+*/
 .heading p {
 	color: black;
 	font-size: 28px;
@@ -78,7 +111,7 @@ body {
 }
 
 .input-section #ingredient {
-	border-radius: 3.2px;
+	border-radius: 3px;
 	border-color: black;
 	border-style: solid;
 	font-family: sans-serif;
@@ -87,8 +120,11 @@ body {
 	margin-right: 60%;
 	margin-bottom: 25px;	
 	padding: 0.10%;
-	width: 100%;
+	width: 500px;
 	text-align: center;
+	position: absolute;
+    right: -275px;
+    top: 25px;
 }
 
 .input-section select {
@@ -99,14 +135,16 @@ body {
 	font-family: sans-serif;
 	font-size: 17.5px;
 	font-weight: bolder;
-	height: 40%;
+	height: 40px;
 	margin-right: 5%;
 	margin-left: 0.15%;	
 	margin-bottom: 25px;
 	padding: 0.15%;
-	padding-bottom: 10%
-	width: 40%;
+	width: 25%;
 	text-align: center;
+	position: absolute;
+    right: 90px;
+    top: 22px;
 }
 
 .input-section .search {
@@ -124,6 +162,8 @@ body {
     margin:0 auto;
     display: block;
 	line-height: 30px;
+    right: -333px;
+    top: 10px;
 }
 
 .recipe-list {
