--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,11 @@ header.heading {
 	display: inline-block;
 	margin: 5px 10px 5px -8px;
 	font-size: 16px;
+	cursor: pointer;
+}
 
+.allergy.highlight {
+	background-color: orange;
 }
 
 
@@ -147,7 +151,7 @@ header.heading {
     top: 22px;
 }
 
-.input-section .search {
+.search {
 	border-color: black;
 	border-radius: 10px;
 	border-style: solid;
@@ -155,14 +159,14 @@ header.heading {
 	font-family: sans-serif;
 	font-size: 21.6px;
 	font-weight: bolder;
-	height: 30px;
+	height: 50px;
 	padding: 0.15%;
-	width: 20%;
+	width: 50%;
 	position: relative;
-    margin:0 auto;
+    margin: 0 auto;
     display: block;
 	line-height: 30px;
-    right: -333px;
+    right: 10px;
     top: 10px;
 }
 
