--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ html, body {
 ul.recipe-details {
     list-style-type: none;
     margin: 0 auto;
-    padding: 10px;
+    padding: 0;
     width: 100%;
     height: 100%;
     left: 0;
@@ -101,6 +101,40 @@ header.heading {
   	border-radius: 40px;
   	position: relative; 	
 }*/
+
+p.rate {
+	position: absolute;
+	right: 0px;
+	/* top: -20px; */
+	background-color:#F2C757;
+	padding: 5px;
+	bottom: 0px;
+}
+
+h2.a {
+	text-decoration: none;
+}
+
+.author {
+	/* margin-right: -45px; */
+	font-size: 15px;
+	font-style: italic;
+	/* right: 120px; */
+	/* position: absolute; */
+	/* text-align: left; */
+}
+
+#recipeName {
+	text-align: left;
+	margin: 10px 0px;
+	font-size: 20px;
+	line-height: 25px;
+}
+
+p.cookTime {
+	text-align: left;
+	margin-top: 20px;
+}
 
 .heading h1 {
 	color: black;
@@ -199,11 +233,11 @@ header.heading {
 }
 
 .recipe-details li {
-	/*border-radius: 25px;*/
+	/* border-radius: 20px; */
 	border: 1px solid black;
 	display: inline-block;
-	margin-top: 2%;
-	margin-bottom: 4%;
+	margin-top: 40px;
+	margin-bottom: 120px;
 	margin-left: 4%;
 	margin-right: 4%;
 	height: 250px;
@@ -224,33 +258,45 @@ header.heading {
 }
 
 .recipe-details a {
-	font-size: 15px;
-	color: black;
+		text-decoration: none;
+	font-size: 20px;
+	color: grey;
 	font-weight: none;
 	margin: 0 auto;
+	max-width: 40%
 }
 
 .recipe-details p {
 	margin: 0 auto;
-	font-size: 15px;
+	font-size: 20px;
 	text-align: center;
-	max-width: : 50%;
+	/* max-width: 70%; */
+	/* padding: 5px; */
+	/* right: 0px; */
+	/* bottom: 0px; */
 }
 
 .recipe-description {
 	width: 100%;
 	color: black;
 	font-weight: bolder;
-	font-size: 18px;
-	text-align: center;
+	font-size: 25px;
+	text-align: left;
 	position: absolute;
 	bottom: 0px;
 	background-color: rgba(255,255,255,0.8);
+	height: 0px;
+	font-color:#E8724A;
 	/*border-radius: 0px 0px 25px 25px;*/
-	padding: 10px 0px;
+	/*padding: 10px 0px;*/
 }
 
-
+.time {
+	/* margin: 32px 10px 10px 165px; */
+	font-size: 70%;
+	font-weight: normal;
+	margin-top: 5px;
+}
 @media only screen and (max-width: 1024px) {
 	#row-results {
 	font-size: 28px;
@@ -373,3 +419,7 @@ header.heading {
 		width: 90%;
 	}
 }
+
+/*delete all positions with left right top bottom
+use inline-block for all Li's
+border radius applies.*/
